--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Box1</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hint_usuario_email_com">usuario@email.com</string>
+    <string name="hint_contrasenia">contraseña</string>
+    <string name="boton_iniciar_sesion">Iniciar sesión</string>
+    <string name="recuerdame">Recuerdame</string>
+    <string name="email">Email</string>
+    <string name="contrasenia">Contraseña</string>
 </resources>
