--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,13 @@
     <string name="comprar">Comprar</string>
     <string name="no_recuerdas_la_contrase_a_haz_click_aqu">¿No recuerdas la contraseña? Haz click aquí.</string>
     <string name="mis_favoritos">Mis favoritos</string>
+    <string name="t_tulo">Título</string>
+    <string name="a_adir_im_genes">Añadir imágenes</string>
+    <string name="escala_ej_1_18">Escala (ej. 1:18)</string>
+    <string name="precio">Precio (€)</string>
+    <string name="marca">Marca</string>
+    <string name="categor_a_seleccione_una_opci_n">Categoría (Seleccione una opción)</string>
+    <string name="estado_seleccione_una_opci_n">Estado (Seleccione una opción)</string>
+    <string name="descripci_n">Descripción</string>
+    <string name="publicar">Publicar</string>
 </resources>
